# arzo-journal-pro

./: .gitignore  RELEASE_NOTES.md  package-lock.json  package.json  release.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
