[package]
name = "arzo-journal"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arzo_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
